--- a/Three.js-TypeScript/package.json
+++ b/Three.js-TypeScript/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "three": "^0.157.0"
+  },
+  "devDependencies": {
+    "@types/three": "^0.157.2"
   }
 }
