--- a/Three.js-TypeScript/package.json
+++ b/Three.js-TypeScript/package.json
@@ -12,6 +12,11 @@
     "three": "^0.157.0"
   },
   "devDependencies": {
-    "@types/three": "^0.157.2"
+    "@types/three": "^0.157.2",
+    "ts-loader": "^9.5.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
   }
 }
